Fix change table UI and reservation misalignment

--- a/viite-UI/src/less/site/project-change-table.less
+++ b/viite-UI/src/less/site/project-change-table.less
@@ -5,7 +5,7 @@
   overflow: hidden;
   width: 80%;
   max-width: 100%;
-  min-width: 960px;
+  min-width: 1012px;
   min-height: 116px;
   background-color: #e3e3e1;
   border: 2px solid #282826;
@@ -15,7 +15,7 @@
 
 /* Header Bar */
 .change-table-header {
-  min-width: 908px;
+  min-width: 1020px;
   position: sticky;
   top: 0;
   display: flex;
